--- a/questTwo/package.json
+++ b/questTwo/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.12.0",
-    "graphql": "^16.10.0"
+    "class-validator": "^0.14.1",
+    "graphql": "^16.10.0",
+    "graphql-scalars": "^1.24.2",
+    "reflect-metadata": "^0.2.2",
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
