--- a/questTwo/tsconfig.json
+++ b/questTwo/tsconfig.json
@@ -7,6 +7,8 @@
       "module": "esnext",
       "moduleResolution": "node",
       "esModuleInterop": true,
-      "types": ["node"]
+      "types": ["node"], 
+      "emitDecoratorMetadata": true, // add this
+      "experimentalDecorators": true // and that
     }
   }
